--- a/404.html
+++ b/404.html
@@ -122,39 +122,19 @@
     <!-- Page Header End -->
 
 
-    <!-- Fact Start -->
+<!-- Fact Start -->
     <div class="container-fluid bg-secondary py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                     <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">79</h1>
-                        <h5 class="text-white mt-1">Number of students</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3 wow fadeIn" data-wow-delay=".3s">
-                    <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">5</h1>
-                        <h5 class="text-white mt-1">Number of students absent</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
-                    <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">120</h1>
-                        <h5 class="text-white mt-1">Total Number of students needed</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
-                    <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">5</h1>
-                        <h5 class="text-white mt-1">Stars reviews</h5>
+                        <h5 class="text-white mt-1">YOU ARE WELCOME...DONT FORGET TO BRING YOUR LAPTOP TO CLASS TOMORROW FOR THE PRACTICAL LESSON(COM LIT)</h5>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Fact End -->
-
 
     <!-- 404 Start -->
     <div class="container-fluid py-5 my-5 wow fadeIn" data-wow-delay="0.3s">
@@ -165,7 +145,7 @@
                     <h1 class="display-1">404</h1>
                     <h1 class="mb-4">Page Not Found..Patrick is working on it</h1>
                     <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
+                    <a class="btn btn-primary rounded-pill py-3 px-5" href="index.html">Go Back To Home</a>
                 </div>
             </div>
         </div>
