--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BMLT 1B LEARNING HUB</title>
+    <title>BMLT 1-BLOG</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -121,10 +121,19 @@
     </div>
     <!-- Page Header End -->
 
-
+    <!-- Fact Start -->
+    <div class="container-fluid bg-secondary py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
+                    <div class="d-flex counter">
+                        <h5 class="text-white mt-1">YOU ARE WELCOME...DONT FORGET TO BRING YOUR LAPTOP TO CLASS TOMORROW FOR THE PRACTICAL LESSON(COM LIT)</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Fact End -->
-
-
 
     <!-- Blog Start -->
     <div class="container-fluid blog py-5 mb-5">
@@ -256,16 +265,6 @@
                         <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
                         <a href="project.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our lecture notes</a>
                         <a href="blog.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <a href="#" class="h3 text-secondary">Help Link</a>
-                    <div class="mt-4 d-flex flex-column help-link">
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Terms Of use</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Privacy Policy</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Helps</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>FQAs</a>
-                        <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
