--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BMLT 1B HUB</title>
+    <title>BMLT 1-SCHOLARSHIPS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -243,15 +243,6 @@
                                 <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i class="fab fa-instagram text-primary"></i></a>
                                 <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-0"><i class="fab fa-linkedin-in text-primary"></i></a>
                             </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <a href="#" class="h3 text-secondary">Short Link</a>
-                    <div class="mt-4 d-flex flex-column short-link">
-                        <a href="about.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>About us</a>
-                        <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
-                        <a href="project.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our lecture notes</a>
-                        <a href="blog.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
-                    </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <a href="#" class="h3 text-secondary">Contact Us</a>
