--- a/project.html
+++ b/project.html
@@ -142,7 +142,8 @@
         <div class="container">
             <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                 <h5 class="text-primary">LECTURE NOTES</h5>
-                <h1>OUR LIBRARY ;DOWNLOAD NOTES HERE</h1>
+                <h1>OUR LIBRARY :DOWNLOAD NOTES HERE</h1>
+                <p>1. Select the lecture note you want. 2. You will be redirected to Google Drive. 3. Click "Request access." 4. Check your email in a few minutes for an access approval email.</p>
             </div>
             <div class="row g-5">
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
