--- a/testimonial.html
+++ b/testimonial.html
@@ -167,7 +167,7 @@
                 <div class="testimonial-item border p-4">
                     <div class="d-flex align-items-center">
                         <div class="">
-                            <img src="img/testimonial-1.jpg" alt="">
+                            <img src="testimonial-11.jpg" alt="">
                         </div>
                         <div class="ms-4">
                             <h4 class="text-secondary">SCHOLARSHIP</h4>
