--- a/testimonial.html
+++ b/testimonial.html
@@ -147,7 +147,7 @@
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
                     <div class="d-flex counter">
                         <h1 class="me-3 text-primary counter-value">5</h1>
-                        <h5 class="text-white mt-1">Stars reviews</h5>
+                        <h5 class="text-white mt-1">Stars Moving</h5>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                 <div class="testimonial-item border p-4">
                     <div class=" d-flex align-items-center">
                         <div class="">
-                            <img src="img/testimonial-2.jpg" alt="">
+                            <img src="testimonial-12.jpg" alt="">
                         </div>
                         <div class="ms-4">
                             <h4 class="text-secondary">SCHOLARSHIP</h4>
@@ -195,7 +195,7 @@
                 <div class="testimonial-item border p-4">
                     <div class=" d-flex align-items-center">
                         <div class="">
-                            <img src="img/testimonial-3.jpg" alt="">
+                            <img src="testimonial-13.jpg" alt="">
                         </div>
                         <div class="ms-4">
                             <h4 class="text-secondary">SCHOLARSHIP</h4>
@@ -209,7 +209,7 @@
                 <div class="testimonial-item border p-4">
                     <div class=" d-flex align-items-center">
                         <div class="">
-                            <img src="img/testimonial-4.jpg" alt="">
+                            <img src="testimonial-14.jpg" alt="">
                         </div>
                         <div class="ms-4">
                             <h4 class="text-secondary">SCHOLARSHIP</h4>
