--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <div class="navbar-nav ms-auto mx-xl-auto p-0">
                         <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="bmlt bot.html" class="nav-item nav-link">our AI</a>
                         <a href="project.html" class="nav-item nav-link">Lecture Notes</a>
                         <a href="https://portal.kstu.edu.gh/students/login" class="nav-item nav-link">Student's PORTAL</a>
                         <div class="nav-item dropdown">
