--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="row">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                     <div class="d-flex counter">
-                        <h5 class="text-white mt-1">YOU ARE WELCOME...DONT FORGET TO BRING YOUR LAPTOP TO CLASS TOMORROW FOR THE PRACTICAL LESSON(COM LIT)</h5>
+                        <h5 class="text-white mt-1">YOU ARE WELCOME.......YOU ARE WELCOME TO THIS NEW SEMESTER ENYOJ YOUR STAYING ....</h5>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                     <h5 class="text-primary">About Us</h5>
-                    <h1 class="mb-4">About US,BMLT 1B EDU PORTAL</h1>
+                    <h1 class="mb-4">About US,KsTU BMLT </h1>
                     <p>We are a group of students from KUMASI Technical University (KsTU), united by our passion for medicine and laboratory science. Our Medilab class platform is a hub for sharing resources, discussing complex topics and collaborating on
                         projects. We believe that learning is a collective effort and that together, we can achieve academic excellence</p>
                     <p class="mb-4">As students, we understand the importance of staying connected and supporting one another. Our platform provides a space for us to ask questions, share concerns and celebrate our successes. We're excited to learn and grow together,
@@ -606,6 +606,7 @@
                         <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
                         <a href="project.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our lecture notes</a>
                         <a href="blog.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
+			<a href="bmlt bot.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>OUR AI</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -624,7 +625,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/OPD***/-->
-                    <span class="text-light">Designed By<a href="https:/" class="text-secondary">BOADU PATRICK</a></span>
+                    <span class="text-light">Designed By<a href="https:/" class="text-secondary">BOADU PATRICK(BMLT 1B)</a></span>
                 </div>
             </div>
         </div>
