--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
             <div class="row">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                     <div class="d-flex counter">
-                        <h5 class="text-white mt-1">YOU ARE WELCOME.......YOU ARE WELCOME TO THIS NEW SEMESTER ENYOJ YOUR STAYING ....</h5>
+                        <h5 class="text-white mt-1">Welcome to the new semester! We hope you enjoy your stay. You can download our timetable here</h5>
+			<a href="timetable.pdf" download="University Timetable">Download Timetable</a>
                     </div>
                 </div>
             </div>
