--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <div class="container">
             <nav class="navbar navbar-dark navbar-expand-lg py-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T 1B</span> </h1>
+                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T FOCUS</span> </h1>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,7 @@
                     <div class="navbar-nav ms-auto mx-xl-auto p-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link active">About</a>
+                        <a href="bmlt bot.html" class="nav-item nav-link">our AI</a>
                         <a href="project.html" class="nav-item nav-link">Lecture Notes</a>
                         <a href="https://portal.kstu.edu.gh/students/login" class="nav-item nav-link">Student's PORTAL</a>
                         <div class="nav-item dropdown">
@@ -128,7 +129,7 @@
             <div class="row">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                     <div class="d-flex counter">
-                        <h5 class="text-white mt-1">YOU ARE WELCOME...DONT FORGET TO BRING YOUR LAPTOP TO CLASS TOMORROW FOR THE PRACTICAL LESSON(COM LIT)</h5>
+                        <h5 class="text-white mt-1">Welcome to the new semester! We hope you enjoy your stay. You can download our timetable here.<a href="timetable.pdf" download="University Timetable">Download Timetable</a></h5>
                     </div>
                 </div>
             </div>
@@ -150,7 +151,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                     <h5 class="text-primary">About Us</h5>
-                    <h1 class="mb-4">About US,BMLT 1B EDU PORTAL</h1>
+                    <h1 class="mb-4">About US,KsTU BMLT</h1>
                     <p>We are a group of students from KUMASI Technical University (KsTU), united by our passion for medicine and laboratory science. Our Medilab class platform is a hub for sharing resources, discussing complex topics and collaborating on
                         projects. We believe that learning is a collective effort and that together, we can achieve academic excellence</p>
                     <p class="mb-4">As students, we understand the importance of staying connected and supporting one another. Our platform provides a space for us to ask questions, share concerns and celebrate our successes. We're excited to learn and grow together,
@@ -277,6 +278,7 @@
                         <a href="contact.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Contact us</a>
                         <a href="project.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Our lecture notes</a>
                         <a href="blog.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
+                        <a href="bmlt bot.html" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Latest Blog</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
