--- a/testimonial.html
+++ b/testimonial.html
@@ -60,7 +60,7 @@
         <div class="container">
             <nav class="navbar navbar-dark navbar-expand-lg py-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T 1B</span> </h1>
+                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T FOCUS</span> </h1>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,7 @@
                     <div class="navbar-nav ms-auto mx-xl-auto p-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="bmlt bot.html" class="nav-item nav-link">our AI</a>
                         <a href="project.html" class="nav-item nav-link">Lecture Notes</a>
                         <a href="https://portal.kstu.edu.gh/students/login" class="nav-item nav-link">Student's PORTAL</a>
                         <div class="nav-item dropdown">
