--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
         <div class="container">
             <nav class="navbar navbar-dark navbar-expand-lg py-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T 1B</span> </h1>
+                    <h1 class="text-white fw-bold d-block">BML<span class="text-secondary">T FOCUS</span> </h1>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,7 @@
                     <div class="navbar-nav ms-auto mx-xl-auto p-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="bmlt bot.html" class="nav-item nav-link">our AI</a>
                         <a href="project.html" class="nav-item nav-link">lecture Notes</a>
                         <a href="https://portal.kstu.edu.gh/students/login" class="nav-item nav-link">Student's PORTAL</a>
                         <div class="nav-item dropdown">
@@ -128,7 +129,7 @@
             <div class="row">
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                     <div class="d-flex counter">
-                        <h5 class="text-white mt-1">YOU ARE WELCOME...DONT FORGET TO BRING YOUR LAPTOP TO CLASS TOMORROW FOR THE PRACTICAL LESSON(COM LIT)</h5>
+                        <h5 class="text-white mt-1">Welcome to the new semester! We hope you enjoy your stay. You can download our timetable here.<a href="timetable.pdf" download="University Timetable">Download Timetable</a></h5>
                     </div>
                 </div>
             </div>
@@ -144,7 +145,7 @@
                     <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
                     <h1 class="display-1">404</h1>
                     <h1 class="mb-4">Page Not Found..Patrick is working on it</h1>
-                    <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
+                    <p class="mb-4">We’re sorry, the page you are looking for does not exist in our website! Go to our home page</p>
                     <a class="btn btn-primary rounded-pill py-3 px-5" href="index.html">Go Back To Home</a>
                 </div>
             </div>
