--- a/project.html
+++ b/project.html
@@ -150,7 +150,7 @@
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="project-item">
                         <div class="project-img">
-                            <img src="img/bm.jpg" class="img-fluid w-100 rounded" alt="">
+                            <img src="bm.jpg" class="img-fluid w-100 rounded" alt="">
                             <div class="project-content">
                                 <a href="https://drive.google.com/drive/folders/1KiFBycpfBua67jrL2jBu99WbJsUHUaBC" class="text-center">
                                     <h4 class="text-secondary">BMLT 1 LECTURE</h4>
