--- a/index.html
+++ b/index.html
@@ -224,6 +224,19 @@
                 <h1>OUR LIBRARY ;DOWNLOAD NOTES HERE</h1>
             </div>
             <div class="row g-5">
+		 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                    <div class="project-item">
+                        <div class="project-img">
+                            <img src="bm.jpg" class="img-fluid w-100 rounded" alt="">
+                            <div class="project-content">
+                                <a href="https://drive.google.com/drive/folders/1KiFBycpfBua67jrL2jBu99WbJsUHUaBC" class="text-center">
+                                    <h4 class="text-secondary">BMLT 1 LECTURE</h4>
+                                    <p class="m-0 text-white">NOTES 2ND SEMESTER</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="project-item">
                         <div class="project-img">
